# ohtu-lukuvinkkikirjasto

./: .coverage  .coveragerc  .env.test  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
lukuvinkkikirjasto/: .env  AppLibrary.py  config.py  index.py  service.py
lukuvinkkikirjasto/entities/: blog_tip.py  book_tip.py  filter.py  filter_params.py  video_tip.py
lukuvinkkikirjasto/repositories/: blog_tip_repository.py  book_tip_repository.py  database_connection.py  video_tip_repository.py
lukuvinkkikirjasto/tests/: blog_tip_repository_test.py  blog_tip_test.py  book_tip_repository_test.py  book_tip_test.py  filter_test.py  service_test.py  video_tip_repository_test.py
lukuvinkkikirjasto/ui/: add_ui.py  app.py  console_menu.py  item_browser.py  print_ui.py  read_ui.py  text_menu.py
src/: AppLibrary.py  app.py  app_library.py  book_browser.py  config.py  database_connection.py  database_test_connection.py  hello.py  index.py  initialise_database.py  service.py  stub_io.py  text_io.py  textio.py
src/entities/: blog_tip.py  book_tip.py  book_tip_test.py  video_tip.py
src/repositories/: blog_tip_repository .py  blog_tip_repository.py  book_tip_repository.py  database_connection.py  video_tip_repository.py
src/tests/: blog_tip_repository_test.py  blog_tip_test.py  book_tip_repository_test.py  book_tip_test.py  hello_test.py  service_test.py  video_tip_repository_test.py
src/ui/: AppLibrary.py  add_ui.py  app.py  book_browser.py  console_menu.py  item_browser.py  print_ui.py  read_ui.py  stub_io.py  text_io.py  text_menu.py
(+29 files in other folders)
