[tool.poetry]
name = "ohtu-lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["tommijuslin <tommi.juslin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pysqlite3 = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
