[tool.poetry]
name = "lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["tommijuslin <tommi.juslin@gmail.com>"]
packages = [
    { include = "lukuvinkkikirjasto"}
]
exclude = ["lukuvinkkikirjasto/tests"]
include = [".env"]

[tool.poetry.scripts]
lukuvinkkikirjasto = "lukuvinkkikirjasto.index:main"

[tool.poetry.dependencies]
python = "^3.8"
pysqlite3 = "^0.4.6"
robotframework = "^4.1.2"
python-dotenv = "^0.19.2"
simple-term-menu = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.12.1"
autopep8 = "^1.6.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
